Sanitized .env.example file and removed secrets